updates to current page, web project section

--- a/current.html
+++ b/current.html
@@ -30,8 +30,10 @@
         <h3 class="centered-text">This Website!</h3>
         <h5 class="centered-text">Started mid November 2022 </h5>
         <p class="about-me">Hoping to put some of the skills I developed at univeresity to practical use,
-            I have coded this page using HTML, CSS and JavaScript. 
-            You can view the code on GitHub, <a href=""> here!</a></p>
+            I coded this page in Visual Studio using HTML, CSS and JavaScript. I then hosted it via AWS. The custom domain
+is hosted via Amazon's Route 53 Domain Name System (DNS). The page is distributed over HTTPS using CloudFront and secured with an SSL certificate. The files are stored using Amazon S3. </p>
+<p> The code has also been uploaded to GitHub and GitBash has been used for version control.    
+            You can view the full code on GitHub, <a href="https://github.com/clynch11/clarelynch.com/settings"> here!</a></p>
             <p class="about-me"> The page is a static website hosted with AWS.</p>
             <br>
             <hr>
@@ -56,3 +58,4 @@
                 </footer>
             </body>
             </html>
+
