--- a/error.html
+++ b/error.html
@@ -6,6 +6,6 @@
         <link href="mystyles.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1>Oh No! An error occured :-( Please try again later! 
+        <h1>Oh No! An error occured &#128544 Please try again later! 
     </body>
     </html>
