--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
         <br>
         <a href="contact.html"><img src="DogPhone.jpg" alt="a cat sitting next to an old phone" class="linkPic"></a>
         <footer class="footer">
-            <p class="centered-text">2022 Clare Lynch </p>
+            <p class="centered-text">©2022 Clare Lynch </p>
         </footer>   
     </body>
     </html>
