--- a/CLAbout.html
+++ b/CLAbout.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="Home.html">Home</a>
+            <a class="active" href="home.html">Home</a>
             <a class="active" href="current.html">Current Projects</a>
             <a class="active" href="past.html">Past Projects</a>
             <a class="active" href="CLAbout.html">About</a>
@@ -60,7 +60,8 @@
         <p class="about-me">Finding myself with extra time during the pandemic, I began filming video lessons to help my students
             practice more effectively at home. I started out filming simple lessons and making small edits using iMovie,
             but quickly realised I needed more skills to produce the content that I had in mind. I finally found
-            Da Vinci Resolve, which allowed me to produce more informative and engaging videos. 
+            Da Vinci Resolve, which allowed me to produce more informative and engaging videos (I still can't believe this
+            awesome software is totally free!). 
             <br>
             <br>
             Over time, this project turned into a short course in violin playing which I uploaded to teachable. The more
@@ -71,7 +72,7 @@
             I had been studying.</p>
             <br>
             <p class="about-me">In my spare time I enjoy performing and experiementing with pedals and sound-design software on my electric violin, 
-            taking and editing nature photos (such as the headers on this page), spending time with family and friends and keeping fit.</p>
+            taking and editing nature photos (including the headers on this page), spending time with family and friends and keeping fit.</p>
         </p>
         <br>
         <br>
