--- a/past.html
+++ b/past.html
@@ -8,7 +8,7 @@
     <body>
         <!--nav bar-->
         <div class="topnav">
-            <a class="active" href="Home.html">Home</a>
+            <a class="active" href="home.html">Home</a>
             <a class="active" href="current.html">Current Projects</a>
             <a class="active" href="past.html">Past Projects</a>
             <a class="active" href="CLAbout.html">About</a>
