change video autoplay

--- a/past.html
+++ b/past.html
@@ -29,7 +29,7 @@
             This involved planning the game and working out the algorithm in detail before
             finally implementing the code. Drawio was used to create the diagrams for the 
             initial planning stage. </p>
-        <video class="video" autoplay controls src="snake.mp4"></video>
+        <video class="video" controls src="snake.mp4"></video>
         <div class="buttons">
         <input type="button" value="Click here to read more!" class="red-button" onClick="document.getElementById('python').style.display='block';">
     </div>
@@ -182,7 +182,7 @@
             I started out making basic videos on iMovie but soon became curious to learn how more engaging animated videos were made. 
             I used Da Vinci Resolve to make the following lessons and performances.    
             </p>
-            <video class="video" autoplay controls id="vid" src="BeatLesson.mp4" class="video">
+            <video class="video" controls id="vid" src="BeatLesson.mp4" class="video">
                 
                 Your browser does not support the video tag.
                 </video>
@@ -233,7 +233,7 @@
                     <li>Weebly</li>
                     
                 </u1>
-                <video class="video" autoplay controls src="Fear of the dark Option 2.MOV"></video>
+                <video class="video" controls src="Fear of the dark Option 2.MOV"></video>
             </div>
             <p class="about-me"> Solo from Fear of the Dark using Behringer UM2 USB audio interface to connect to 
                 Windows11. Effects and backing track added in Audacity.</p>
