updates to projects

--- a/CLAbout.html
+++ b/CLAbout.html
@@ -71,7 +71,7 @@
             which began filling in further gaps in my knowledge regarding how computers work at a hardware level and interact with the programming languages 
             I had been studying.</p>
             <br>
-            <p class="about-me">In my spare time I enjoy performing and experiementing with pedals and sound-design software on my electric violin, 
+            <p class="about-me">In my spare time I enjoy performing and experimenting with pedals and sound-design software on my electric violin, 
             taking and editing nature photos (including the headers on this page), spending time with family and friends and keeping fit.</p>
         </p>
         <br>
