--- a/current.html
+++ b/current.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="Home.html">Home</a>
+            <a class="active" href="home.html">Home</a>
             <a class="active" href="current.html">Current Projects</a>
             <a class="active" href="past.html">Past Projects</a>
             <a class="active" href="CLAbout.html">About</a>
@@ -18,6 +18,21 @@
             <div class="title">Current Projects</div>
             <div class="copyrightHome"> © 2021 Clare Lynch </div>
         </div>
+<!--This Website-->
+        <h3 class="centered-text">This Website!</h3>
+        <h5 class="centered-text">Started mid November 2022 </h5>
+        <p class="about-me">Hoping to put some of the skills I developed at university to practical use,
+            I coded this static website in Visual Studio using HTML, CSS and JavaScript. I chose
+            Amazon Web Services to host the page due to it's combination of simplicity and security.
+            The files were then added using GitBash (and can be viewed on GitHub <a target="_blank" href="https://github.com/clynch11/clarelynch.com"> here!</a>
+            From here, I used a CodePipeline to send updates to the S3 bucket where the website files
+            are stored. Finally, the S3 bucket is connected to CloudFront and my custom domain name set up using 
+            Route53. An SSL(Secure Socket Layer) certificate allows the page to run over HTTPS, meaning the data 
+            is encrypted as it travels between client and server. </p>
+            <br>
+            <hr>
+            <br>
+<!--CompTIA-->
         <h3 class="centered-text">CompTIA A+ Certification 220-1001</h3>
         <h5 class="centered-text">Started mid November 2022 </h5>
         <p class="about-me">I am currently studying for the exam
@@ -27,17 +42,7 @@
         <br>
         <hr>
         <br>
-        <h3 class="centered-text">This Website!</h3>
-        <h5 class="centered-text">Started mid November 2022 </h5>
-        <p class="about-me">Hoping to put some of the skills I developed at univeresity to practical use,
-            I coded this page in Visual Studio using HTML, CSS and JavaScript. I then hosted it via AWS. The custom domain
-is hosted via Amazon's Route 53 Domain Name System (DNS). The page is distributed over HTTPS using CloudFront and secured with an SSL certificate. The files are stored using Amazon S3. </p>
-<p> The code has also been uploaded to GitHub and GitBash has been used for version control.    
-            You can view the full code on GitHub, <a href="https://github.com/clynch11/clarelynch.com/settings"> here!</a></p>
-            <p class="about-me"> The page is a static website hosted with AWS.</p>
-            <br>
-            <hr>
-            <br>
+<!--Steps2Music-->
             <h3 class="centered-text">Creating the site that hosted my courses in violin playing, using code instead of Teachable's template</h3>
             <h5 class="centered-text">Started mid November 2022 </h5>
             <p class="about-me">
@@ -49,6 +54,7 @@ is hosted via Amazon's Route 53 Domain Name System (DNS). The page is distribute
             <br>
             <hr>
             <br>
+<!--Microsoft Azure-->
             <h3 class="centered-text">Microsoft Azure Fundamentals AZ-900</h3>
             <h5 class="centered-text">Started mid November 2022 </h5>
             <p class="about-me">
