--- a/past.html
+++ b/past.html
@@ -45,8 +45,9 @@
                  
                 <p class="about-me">The x and y variables are first used to draw the 'snake' to the screen. 
                     x_change moves the snake 20px in the direction specified by the user. Pygame KEYDOWN is used
-                    to detect keyboard input. x += x_change means that the value of x (coordinates of the current position)
-                    is added to or subtracted from the value of x_change (+ or - 20px) each time the main loop runs (5 times per second). The same is specified for the y axis, allowing the snake 
+                    to detect keyboard input. x += x_change means that the value of x_change (+ or - 20px) is added to or 
+                    subtracted from the value of x (coordinates of the current position)
+                    each time the main loop runs (5 times per second). The same is specified for the y axis, allowing the snake 
                     to move continously. </p>
 
                 <img src="snake-move.png" alt="python code showing how the snake moves" class="centered-pic">
@@ -125,7 +126,15 @@
     </div>
     <br>
     <br>           
-
+<!--HTML/CSS Beginner-->
+    <h3 class="centered-text">HTML/CSS - starting out!</h3>
+    <h5 class="centered-text">August 2022</h5>
+    <p class="about-me">I began learning HTML, CSS and JavaScript at the beginning of term 2. 
+        My first projects involved coding simple pages including tables, different border styles, 
+        lists and images such as the one pictured below. I enjoyed HTML, CSS and JavaScript and used these after 
+        finishing university to code this website! 
+    </p>
+    <img src="SampleHTML.png" alt="a table created using HTML and CSS" style="width:30%" class="centered-pic">
 
 
             <!--Virtual Machines--> 
@@ -170,7 +179,7 @@
     <p class="about-me">Once enrolled in my Graduate Certificate, I prepared by trying to get a 
     basic understanding of IT. I had no technical computing knowledge other than using software I had 
     needed for my music programs prior to my career change. Whilst working my last term as a full-time
-    music teacher, I began by taking a beginner's course on TryHackMe in the evenings and trying some 
+    music teacher, I began preparing for my course by taking a beginner's course on TryHackMe in the evenings and trying some 
     basic code lessons on the app Mimo.</p>
 </p>
 <br>
