--- a/current.html
+++ b/current.html
@@ -38,6 +38,7 @@
         <p class="about-me">I am currently studying for the exam
             which I hope will help me in my first IT-based role. I began by enrolling in
             Mike Meyers Total:CompTIA A+ Certificaton course on Udemy. 
+            My main area of study so far has been networking and IP addressing. 
         </p>
         <br>
         <hr>
