--- a/home.html
+++ b/home.html
@@ -19,6 +19,19 @@
             <div class="copyrightHome"> © 2021 Clare Lynch </div>
         </div>
         <hr>
+        <h2 class="centered-text">Welcome to my portfolio!</h2>
+        <h3 class="centered-text">Hi! I'm Clare!</h3>
+        <img src="Portrait2.jpg" alt="photo of me with violin" style="width:20%;" class="centered-pic">
+        <p class="about-me">I'm a violinist and small business owner
+            making a career change into IT. I've just completed a Graduate
+            Certificate in Cyber Security and am now looking for the right position
+            to continue my learning and start my new career. I have coded this page using
+            HTML, CSS, JavaScript and AWS as one of my first projects post uni, aiming to showcase
+            my progress so far! Check it out and get in touch to chat all things technology! 
+        </p>
+        <br>
+        <hr>
+        <br>
         <h2 class="centered-text"> <a href="current.html">Current Projects</a></h2>
         <br>
         <a href="current.html"><img src="dogStudy.jpg" alt="studious dog looking at computer" class="linkPic"></a>
