fixed contact form link

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <a href="CLAbout.html"><img src="autumnViolin.jpg" alt="girl playing violin amongst by fallen autumn leaves" class="linkPic"></a>
         <br>
         <hr>
-        <h2 class="centered-text"> <a href="contact.html">Contact </a></h2>
+        <h2 class="centered-text"> <a href="ContactMe.html">Contact </a></h2>
         <br>
         <a href="contact.html"><img src="DogPhone.jpg" alt="a cat sitting next to an old phone" class="linkPic"></a>
         <footer class="footer">
