added relational db info

--- a/current.html
+++ b/current.html
@@ -24,7 +24,7 @@
         <p class="about-me">Hoping to put some of the skills I developed at university to practical use,
             I coded this static website in Visual Studio using HTML, CSS and JavaScript. I chose
             Amazon Web Services to host the page due to it's combination of simplicity and security.
-            The files were then added using GitBash (and can be viewed on GitHub <a target="_blank" href="https://github.com/clynch11/clarelynch.com"> here!</a>
+            The files were then added using GitBash (and can be viewed on GitHub <a target="_blank" href="https://github.com/clynch11/clarelynch.com"> here!)</a>
             From here, I used a CodePipeline to send updates to the S3 bucket where the website files
             are stored. Finally, the S3 bucket is connected to CloudFront and my custom domain name set up using 
             Route53. An SSL(Secure Socket Layer) certificate allows the page to run over HTTPS, meaning the data 
