--- a/past.html
+++ b/past.html
@@ -46,7 +46,12 @@
                     <a target="_blank" href="https://github.com/clynch11/Python-Beginner-Coding/blob/main/SimpleOOP.ipynb">here!</a>
                     In this example, calling the 'role' method will print '[employee] works in [area]' to the screen. 
                     In the snake game, I used classes Snake, Food, Sounds and Messages. 
-                <h5 class="centered-text">The 'secret' to the continuously moving snake!</h5>
+                <br>
+                <div class="centered-text"><a target="_blank" href="https://github.com/clynch11/Python-Beginner-Coding/blob/main/SimpleOOP.ipynb">
+                    Very simple OOP demonstration in Python</a></div>
+                <br>
+                
+                    <h5 class="centered-text">The 'secret' to the continuously moving snake!</h5>
                  
                 <p class="about-me">The x and y variables are first used to draw the 'snake' to the screen. 
                     x_change moves the snake 20px in the direction specified by the user. Pygame KEYDOWN is used
@@ -171,7 +176,15 @@
                 </div>
                         <div id="sql" class="modal">
                         <h3 class="centered-text">Relational Databases</h3>    
-                        <p class="about-me"></p>
+                        <p class="about-me">The relational database model was developed by E.F. Codd of
+                            IBM in the 1970s. A relational database is a collection of tables
+                            with columns (attributes - the template of our table) and rows (entries/records which will store the actual data). 
+                            Each table must have a unique, identifying attribute which is called the primary key. 
+                            A foreign key references the primary key of another table and in this way allows tables to be
+                            linked together (related to each other!)
+                        </p>
+                        <br>
+                        <br>
                         <h3 class="centered-text">MySQL Assignment</h3>
                         <p class="about-me">This assignment worked with a database containing information about bus drivers
                         and their schedules. Some drivers had been allocated shifts that overlapped with each other and our task was
