--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
         <hr>
         <h2 class="centered-text"> <a href="ContactMe.html">Contact </a></h2>
         <br>
-        <a href="contact.html"><img src="DogPhone.jpg" alt="a cat sitting next to an old phone" class="linkPic"></a>
+        <a href="contact.html"><img src="DogPhone.jpg" alt="a dog sitting next to an old phone" class="linkPic"></a>
         <footer class="footer">
             <p class="centered-text">©2022 Clare Lynch </p>
         </footer>   
