updated github link

--- a/past.html
+++ b/past.html
@@ -131,10 +131,10 @@
     <p class="about-me">I began studying Python in mid July, starting with the absolute
         basics and progressing to writing small snippets of code to create patterns, determine
         the age of a user based on input, operate a simple shopping checkout and other similar projects. 
-        My mid term assessment was submitted five weeks into the course and can be viewed on <a href="https://github.com/clynch11/Python-Beginner-Coding/blob/main/Clare%20Lynch_7568473_Assessment%203.ipynb">GitHub.</a> 
+        My mid term assessment was submitted five weeks into the course and can be viewed on <a href="https://github.com/clynch11/Python-Beginner-Coding/blob/main/Mid%20Term%20Assessment">GitHub.</a> 
     </p>
     <div class="buttons">
-        <a target="_blank" href="https://github.com/clynch11/Python-Beginner-Coding/blob/main/Clare%20Lynch_7568473_Assessment%203.ipynb">
+        <a target="_blank" href="https://github.com/clynch11/Python-Beginner-Coding/blob/main/Mid%20Term%20Assessment">
             Click here to check out the full code on GitHub!</a>
     </div>
     <br>
