changed portrait pic

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <hr>
         <h2 class="centered-text">Welcome to my portfolio!</h2>
         <h3 class="centered-text">Hi! I'm Clare!</h3>
-        <img src="Portrait2.jpg" alt="photo of me with violin" style="width:20%;" class="centered-pic">
+        <img src="portrait.jpg" alt="photo of me with violin" style="width:20%;" class="centered-pic">
         <p class="about-me">I'm a violinist and small business owner
             making a career change into IT. I've just completed a Graduate
             Certificate in Cyber Security and am now looking for the right position
