testing media adjustment

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Clare Lynch</title>
-        <link href="mystyles.css" rel="stylesheet"/>
+        <link href="mystyles.css" rel="stylesheet" media="screen"/>
     </head>
     <body>
         <div class="topnav">
