--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Clare Lynch</title>
         <link href="mystyles.css" rel="stylesheet" media="screen"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="topnav">
