--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         </div>
         <div class="header">
             <img src="BayofFires.jpg" alt="sunrise over a rockpool" style="width:100%;">
-            <div class="title">Clare Lynch</div>
+            <div class="title"><h1>Clare Lynch</h1></div>
             <div class="copyrightHome"> © 2021 Clare Lynch </div>
         </div>
         <hr>
