essential 8 updates and final viewport adjustments

--- a/current.html
+++ b/current.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Clare Lynch</title>
         <link href="mystyles.css" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="topnav">
@@ -15,7 +16,7 @@
         </div>
         <div class="header">
             <img src="SunsetRiver.jpg" alt="sunrise over a rockpool" style="width:100%;">
-            <div class="title">Current Projects</div>
+            <div class="title"><h1>Current Projects</h1></div>
             <div class="copyrightHome"> © 2021 Clare Lynch </div>
         </div>
 <!--This Website-->
@@ -37,12 +38,30 @@
         <h5 class="centered-text">Started mid November 2022 </h5>
         <p class="about-me">I am currently studying for the exam
             which I hope will help me in my first IT-based role. I began by enrolling in
-            Mike Meyers Total:CompTIA A+ Certificaton course on Udemy. 
-            My main area of study so far has been networking and IP addressing. 
+            Mike Meyers Total:CompTIA A+ Certificaton course on Udemy.  
         </p>
         <br>
         <hr>
         <br>
+        <h3 class="centered-text">Learning about the Essential Eight</h3>
+        <h5 class="centered-text">Started late November 2022 </h5>
+        <br>
+        <h5 class="about-me">The Essential Eight are: </h5>
+        <div class="about-me">
+        <p>
+            <ul>
+                <li>Whitelist applications - use only applications that are deemed as safe</li>
+                <li>Patch software - implement an automated patch management system</li>
+                <li>Block Microsoft Office macros that have not been vetted</li>
+                <li>Fortify user applications - add extra protection where required, including disabling Flash</li>
+                <li>Restrict Access Privileges - only grant access to those who need it</li>
+                <li>Enable Multi-Factor Authentication</li>
+                <li>Update Operating Systems - run the latest operating system available</li>
+                <li>Perform daily system back-ups</li>
+            </ul>
+        </p></div>
+        <br>
+        <br>  
 <!--Steps2Music-->
             <h3 class="centered-text">Creating the site that hosted my courses in violin playing, using code instead of Teachable's template</h3>
             <h5 class="centered-text">Started mid November 2022 </h5>
