--- a/past.html
+++ b/past.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Clare Lynch</title>
         <link href="mystyles.css" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <!--nav bar-->
@@ -17,7 +18,7 @@
         <!--header-->
         <div class="header">
             <img src="Ross.JPG" alt="sunrise over a rockpool" style="width:100%;">
-            <div class="title">Past Projects</div>
+            <div class="title"><h1>Past Projects</h1></div>
             <div class="copyright"> © 2021 Clare Lynch </div>
         </div>
 
