--- a/CLAbout.html
+++ b/CLAbout.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Clare Lynch</title>
         <link href="mystyles.css" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="topnav">
@@ -15,7 +16,7 @@
         </div>
         <div class="header">
             <img src="Boat-Pic.jpg" alt="sunrise over a rockpool" style="width:100%;">
-            <div class="title">About Me</div>
+            <div class="title"><h1>About Me</h1></div>
             <div class="copyright"> © 2022 Clare Lynch </div>
         </div>
         <h1 class="centered-text">Qualifications</h1>
